--- a/templates/quiz/categories.html
+++ b/templates/quiz/categories.html
@@ -7,8 +7,8 @@ Home
 
 {% block auth_buttons_block %}
 <div class = "auth_buttons">
-    <a href = "{% url 'quiz:login' %}"> <button>Login</button></a>
-    <a href = "{% url 'quiz:register' %}"> <button>Register</button></a>
+    <a href = "login.html"> <button>Login</button></a>
+    <a href = "register.html"> <button>Register</button></a>
 </div>
 {% endblock %}
 
