--- a/templates/quiz/play.html
+++ b/templates/quiz/play.html
@@ -33,37 +33,35 @@
             <button class="burger-menu">☰</button>
 
         </header>
-
         <main>
-            <main>
-                <div class="quiz-container">
-                    <div class="timer-container">
-                        <span id="question-number">1/xx</span>
-                    </div>
-        
-                    <h2 class="question">Which Chinese dynasty ruled from 1644 until 1911?</h2>
-        
-                    <div class="options">
-                        <button class="option">MC_A</button>
-                        <button class="option">MC_B</button>
-                        <button class="option">MC_C</button>
-                        <button class="option">MC_D</button>
-                    </div>
-        
-                    <p class="score">Score: <span id="score">____</span></p>
-                </div>
-            </main>
-                </main>
+            <div class="quiz-container">
+                {%if question %}
+                    <form method = "POST">
+                        {% csrf_token %}
+                        <div class="timer-container">
+                            span id= "question-number"> xx/x</div>span>
+                        </div>
+                        <h2 class="question">{{question.question_text}}</h2> 
+                        <div class="options">
+                            {{form.answers}}
+                        </div>
+                        <button type = "submit" name = "answers" value="{{ value}}">{{label}}</button>
+                    </form>
+                {% else %}
+                <p> No questions avaliable, </p>
+                {% endif %}
+            </div>
+        </main>
 
 
-            <footer>
-            <nav class = "nav_links"> 
-                <ul>
-                    <li><a href = "index.html">Home</a></li>
-                    <li><a href = "categories.html">Categories</a></li>
-                    <li><a href = "profile.html">Profile</a></li>
-                </ul>
-            </nav>
-            </footer>
+        <footer>
+        <nav class = "nav_links"> 
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "categories.html">Categories</a></li>
+                <li><a href = "profile.html">Profile</a></li>
+            </ul>
+        </nav>
+        </footer>
     </body>
 </html>
