--- a/templates/quiz/category.html
+++ b/templates/quiz/category.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class = "auth_buttons">
-                    <a href = "{% url 'quiz:login' %}"> <button>Login</button></a>
+                    <a href = "login.html"> <button>Login</button></a>
                     <a href = "{% url 'quiz:register' %}"> <button>Register</button></a>
             </div>
 
