--- a/templates/quiz/base.html
+++ b/templates/quiz/base.html
@@ -25,7 +25,7 @@
                 <nav class="nav_links">
                     <ul>
                         <li><a href="{% url 'quiz:index' %}">Home</a></li>
-                        <li><a href="">Categories</a></li>
+                        <li><a href="{% url 'quiz:categories' %}">Categories</a></li>
                         {% if user.is_authenticated %}
                         <li><a href="{% url 'quiz:profile' %}">Profile</a></li>
                         <li><a href = "{% url 'quiz:logout' %}">Logout</a></li>
@@ -45,7 +45,7 @@
                     <!-- Change urls here -->
 
                     <li><a href="{% url 'quiz:index' %}">Home</a></li>
-                    <li><a href="">Categories</a></li>
+                    <li><a href="{% url 'quiz:categories' %}">Categories</a></li>
                     {% if user.is_authenticated %}
                     <li><a href="{% url 'quiz:profile' %}">Profile</a></li>
                     <li><a href="{% url 'quiz:logout' %}">Logout</a></li>
@@ -69,7 +69,7 @@
                 <ul>
                     <!-- Change all these links -->
                     <li><a href = "{% url 'quiz:index' %}">Home</a></li>
-                    <li><a href = "">Categories</a></li>
+                    <li><a href = "{% url 'quiz:categories' %}">Categories</a></li>
                     {% if user.is_authenticated %}
                     <li><a href = "{% url 'quiz:profile' %}">Profile</a></li>
                     <li><a href = "{% url 'quiz:logout' %}">Logout</a></li>
