--- a/templates/quiz/index.html
+++ b/templates/quiz/index.html
@@ -19,14 +19,14 @@ Home
 {% endblock %}
 
 
-{% block main_block %}
+{% block main_body_block %}
 <main>    
     <div class="holder">
         <h1>Quizaholic</h1>
         <label> “Welcome to Quizaholic! Test your knowledge, challenge yourself, and climb the leaderboards. Are you ready to play?”</label>
         <br>
         <!-- Change url here -->
-        <a href ="categories.html"><button>Start Game!</button></a>
+        <a href ="{% url 'quiz:categories' %}"><button>Start Game!</button></a>
     </div>
 </main>
 {% endblock %}
