--- a/templates/quiz/learn.html
+++ b/templates/quiz/learn.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 
 <html>
     <head>
@@ -7,14 +8,14 @@
         <title>
             Quizhaholic
         </title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="{% static 'files/styles.css' %}">
     </head>
     <body>
 
         <header>
             <div class="header-left-group">
                 <div class="logo">
-                    <h1><a href="{% url 'quiz/index %'}"><img src="logo.png">Quizhaholic</a></h1>
+                    <h1><a href="{% url 'quiz:index' %}"><img src="logo.png">Quizhaholic</a></h1>
                 </div>
                 <nav class="nav_links">
                     <ul>
@@ -40,13 +41,15 @@
                         <form method = "POST">
                             {% csrf_token %}
                             <div class="timer-container">
-                                span id= "question-number"> xx/x</div>span>
+                                <span id= "question-number"> xx/x</span>
                             </div>
                             <h2 class="question">{{question.question_text}}</h2> 
                             <div class="options">
                                 {{form.answers}}
                             </div>
-                            <button type = "submit" name = "answers" value="{{ value}}">{{label}}</button>
+                            {% for answer in answers %}
+                            <button type = "submit" name = "answers" value="{{ answer.answer_text }}">{{ answer.answer_text }}</button>
+                            {% endfor %}
                         </form>
                     {% else %}
                     <p> No questions avaliable, </p>
