--- a/templates/quiz/play.html
+++ b/templates/quiz/play.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 
 <html>
     <head>
@@ -7,7 +8,7 @@
         <title>
             Quizhaholic
         </title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="{% static 'files/styles.css' %}">
     </head>
     <body>
 
@@ -33,25 +34,44 @@
             <button class="burger-menu">☰</button>
 
         </header>
+
+        <div id="wrong-answer-popup" class="wrong-answer-popup">
+            <p>Oops! That answer is incorrect.</p>
+            <a href="{% url 'quiz:categories' %}"><button >Go Back to Categories</button></a>
+            <button onclick="closePopup()">Close</button>
+        </div>
+        
+        {% if is_wrong %}
+            <script>
+                document.addEventListener('DOMContentLoaded', function() {
+                    showWrongAnswerPopup();
+                });
+            </script>
+        {% endif %}
+        
         <main>
             <div class="quiz-container">
                 {%if question %}
-                    <form method = "POST">
-                        {% csrf_token %}
-                        <div class="timer-container">
-                            span id= "question-number"> xx/x</div>span>
-                        </div>
-                        <h2 class="question">{{question.question_text}}</h2> 
-                        <div class="options">
-                            {{form.answers}}
-                        </div>
-                        <button type = "submit" name = "answers" value="{{ value}}">{{label}}</button>
-                    </form>
-                {% else %}
-                <p> No questions avaliable, </p>
-                {% endif %}
+                <form method = "POST">
+                    {% csrf_token %}
+                    <div class="timer-container">
+                        <span id= "question-number"> xx/x</span>
+                    <h2 id="question">{{question.question_text}}</h2>
+                    </div>
+                    <div class="options">
+                        {{form.answers}}
+                    </div>
+                    {% for answer in answers %}
+                    <button type = "submit" name = "answers" value="{{ answer.answer_text }}">{{ answer.answer_text }}</button>
+                    {% endfor %}
+                </form>
+            {% else %}
+            <p> No questions avaliable, </p>
+            {% endif %}
             </div>
         </main>
+
+
 
 
         <footer>
