--- a/templates/quiz/timed.html
+++ b/templates/quiz/timed.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+{% load staticfiles %}
 <html>
     <head>
         <meta charset="UTF-8">
@@ -7,7 +7,7 @@
         <title>
             Quizhaholic
         </title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="{% static 'files/styles.css' %}">
     </head>
     <body>
 
@@ -36,21 +36,28 @@
 
         <main>
             <div class="quiz-container">
+                <div class="timer-container">
+                    <span>Timer:</span>
+                    <div class="progress-bar">
+                        <div class="progress">
+                        </div>
+                    </div>
+                    <span id= "question-number"> xx/x</span>
+                </div>    
                 {%if question %}
-                    <form method = "POST">
-                        {% csrf_token %}
-                        <div class="timer-container">
-                            span id= "question-number"> xx/x</div>span>
-                        </div>
-                        <h2 class="question">{{question.question_text}}</h2> 
-                        <div class="options">
-                            {{form.answers}}
-                        </div>
-                        <button type = "submit" name = "answers" value="{{ value}}">{{label}}</button>
-                    </form>
-                {% else %}
-                <p> No questions avaliable, </p>
-                {% endif %}
+                <form method = "POST">
+                    {% csrf_token %}
+                    <h2 class="question">{{question.question_text}}</h2> 
+                    <div class="options">
+                        {{form.answers}}
+                    </div>
+                    {% for answer in answers %}
+                    <button type = "submit" name = "answers" value="{{ answer.answer_text }}">{{ answer.answer_text }}</button>
+                    {% endfor %}
+                </form>
+            {% else %}
+            <p> No questions avaliable, </p>
+            {% endif %}
             </div>
         </main>
 
