Few changes made

--- a/templates/quiz/leaderboards.html
+++ b/templates/quiz/leaderboards.html
@@ -19,15 +19,18 @@ Leaderboards - {{ category.name }}
             <h2><u>Normal</u></h2>
             <div class = "lbNormal2">
                 <table class="lbTable">
-                    <tr><th>User</th><th>Score</th></tr>
-                    {% if normal %}
-                        {% for game in normal %}
-                        <tr>
-                            <td><img src="{% static 'images/pfp.png' %}"> {{ game.user.username }}</td>
-                            <td>{{ game.score }}</td>
-                        </tr>
-                        {% endfor %}
-                    {% endif %}
+                    <tr><th>Rank</th><th>User</th><th>Score</th></tr>
+                
+                    {% for entry in normal %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td><img src="{{ entry.user.userprofile.profile_picture.url }}"> {{ entry.user.username }}</td>
+                        <td>{{ entry.score }}</td>
+                    </tr>
+                    {% empty %}
+                    <tr><td colspan="3">No scores yet.</td></tr>
+                    {% endfor %}
+
                 </table>
             </div>
             <div>
@@ -50,15 +53,16 @@ Leaderboards - {{ category.name }}
             <h2><u>Timed</u></h2>
             <div class="lbTimed2">
                 <table class="lbTable">
-                    <tr><th>User</th><th>Score</th></tr>
-                    {% if timed %}
-                        {% for game in timed %}
-                        <tr>
-                            <td><img src="{% static 'images/pfp.png' %}"> {{ game.user.username }}</td>
-                            <td>{{ game.score }}</td>
-                        </tr>
-                        {% endfor %}
-                    {% endif %}
+                    <tr><th>Rank</th><th>User</th><th>Score</th></tr>
+                    {% for entry in timed %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td><img src="{{ entry.user.userprofile.profile_picture.url }}"> {{ entry.user.username }}</td>
+                        <td>{{ entry.score }}</td>
+                    </tr>
+                    {% empty %}
+                    <tr><td colspan="3">No scores yet.</td></tr>
+                    {% endfor %}
                 </table>
             </div>
             <table class="lbTable">
