--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -160,17 +160,6 @@ header {
     margin-top: 10px;
 }
 
-.off-screen-menu img{
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 1px solid #ddd;
-    display: flex;
-    object-fit: cover;
-    outline:auto;
-
-}
-
 .auth_buttons .message {
     color: #333;
     font-size: 16px;
@@ -197,8 +186,8 @@ header {
 
 main {
     display: flex;
-    flex-direction: column; /* Stack items vertically */
-    justify-content: flex-start; /* Align content at the top */
+    flex-direction: column; 
+    justify-content: flex-start; 
     align-items: center;
     width: 100%;
     min-height: 85vh;
@@ -215,7 +204,7 @@ main a{
     padding: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     width: 60%;
-    min-height: 400px; /* Adjust height dynamically */
+    min-height: 400px; 
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -461,16 +450,15 @@ main a{
     background-color: #ffffff;
     outline: auto;
     overflow-y: scroll;
-    height: 500px; /* Adjusted height */
+    height: 500px; 
 }
 
-/* Make table scrollable if needed */
 .lbTable {
     background-color: white;
     width: 100%;
     max-width: 400px;
     outline: auto;
-    overflow-x: auto; /* Allows horizontal scroll */
+    overflow-x: auto; 
 }
 
 th, td {
@@ -486,6 +474,7 @@ tr:hover{
 .lbTable img {
     width: 20px;
     height: 20px;
+    border-radius: 8px;
     align-items: center;
 }
 
@@ -498,7 +487,7 @@ img:hover{
 .quiz-container {
 
     width: 60%;
-    min-height: 400px; /* Adjust height dynamically */
+    min-height: 400px; 
     background: white;
     width: 60%;
     margin: 40px auto;
@@ -691,7 +680,6 @@ footer a {
 
     .lbNormal, .lbTimed {
         width: 90%; 
-        max-width: 100%; 
         justify-content: center;
         align-items: center;
     }
@@ -704,6 +692,7 @@ footer a {
     .lbTable img {
         width: 16px;
         height: 16px;
+        border-radius: 8px;
     }
 
     .options {
@@ -763,16 +752,15 @@ footer a {
   text-align: center;
 }
 
-/* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; 
+  position: fixed; 
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto;
   background-color: #474e5d;
   padding-top: 50px;
 
@@ -781,9 +769,9 @@ footer a {
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  margin: 5% auto 15% auto;  
   border: 1px solid #ccc;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%; 
 }
 
 /* Clear floats */
@@ -798,4 +786,14 @@ footer a {
    .Leaderbutton {
     width: 100%;
   }
+}
+.img_demo {
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    outline:auto;
+}
+
+#pfplink {
+    color:#2E8BC0;
 }
