--- a/templates/quiz/base.html
+++ b/templates/quiz/base.html
@@ -10,7 +10,7 @@
             {% block title_block %}
             {% endblock %}
         </title>
-
+        <link rel="icon" href="{% static 'images/logo.png' %}">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}" /> 
     </head>
     <body>
@@ -20,7 +20,7 @@
                 <div class="logo">
 
                     <!-- Change urls here -->
-                    <h1><a href="{% url 'quiz:index' %}"><img src="">Quizhaholic</a></h1> 
+                    <h1><a href="{% url 'quiz:index' %}"><img src="{% static 'images/logo.png' %}">Quizhaholic</a></h1> 
                 </div>
                 <nav class="nav_links">
                     <ul>
