--- a/templates/quiz/learn.html
+++ b/templates/quiz/learn.html
@@ -8,19 +8,22 @@
 {% block main_body_block %}
 <main>
     <div class="quiz-container">
-        <div class="timer-container">
-            <!-- How do I change the question number -->
-            <span id="question-number">1/100</span>
-        </div>
-
-        <h2 class="question">{{ question.text }}</h2>
-
-        <div class="options">
-            <button class="option">{{ answer1 }}</button>
-            <button class="option">{{ answer2 }}</button>
-            <button class="option">{{ answer3 }}</button>
-            <button class="option">{{ answer4 }}</button>
-        </div>
+        {%if question %}
+            <form method = "POST">
+                {% csrf_token %}
+                <div class="timer-container">
+                    <span id= "question-number"> xx/x</span>
+                </div>
+                <h2 class="question">{{question.question_text}}</h2> 
+                <div class="options">
+                {% for answer in answers %}
+                <button type = "submit" class="option" name = "answers" value="{{ answer.answer_text }}">{{ answer.answer }}</button>
+                {% endfor %}
+                </div>
+            </form>
+        {% else %}
+        <p> No questions avaliable, </p>
+        {% endif %}
     </div>
 </main>
 
