--- a/templates/quiz/category.html
+++ b/templates/quiz/category.html
@@ -12,14 +12,36 @@
         
         <!-- Maybe change these -->
         <label>Choose a game mode or view the leaderboards</label>
-        <label>Learn Mode : Answer questions with no points until you get bored</label>
+
+        {% if user.is_authenticated %}
+            <label>Learn Mode: Answer questions with no points until you get bored</label>
+        {% endif %}
+        
         <label>Normal Mode : Answer questions with points until you get one wrong</label>
-        <label>Timed Mode :  </label>
+
+        {% if user.is_authenticated %}
+            <label>Timed Mode: Test your speed in answering questions</label>
+        {% endif %}
+
+
 
         <div>
-            <a href="{% url 'quiz:fetch_question' category.slug 'learn' first_question %}"><button>Learn Mode</button></a>
-            <a href="{% url 'quiz:fetch_question' category.slug 'normal' first_question %}"><button>Normal Mode</button></a>
-            <a href="{% url 'quiz:fetch_question' category.slug 'timed' first_question %}"><button>Timed Mode</button></a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'quiz:fetch_question' category.slug 'learn' first_question %}">
+                    <button>Learn Mode</button>
+                </a>
+            {% endif %}
+
+            <a href="{% url 'quiz:fetch_question' category.slug 'normal' first_question %}">
+                <button>Normal Mode</button>
+            </a>
+
+            {% if user.is_authenticated %}
+                <a href="{% url 'quiz:fetch_question' category.slug 'timed' first_question %}">
+                    <button>Timed Mode</button>
+                </a>
+            {% endif %}
+
             <a href="{% url 'quiz:leaderboard' category.slug %}"><button>Leaderboards</button></a>
         </div>
     </div>
