altered timed mode text

--- a/templates/quiz/category.html
+++ b/templates/quiz/category.html
@@ -21,7 +21,7 @@
         <label>Normal Mode : Answer questions with points until you get one wrong</label>
 
         {% if user.is_authenticated %}
-            <label>Timed Mode: Test your speed in answering questions</label>
+            <label>Timed Mode:You have 5 seconds to answer each question, when the time is up the game is over!</label>
         {% endif %}
 
 
