--- a/templates/quiz/finishplay.html
+++ b/templates/quiz/finishplay.html
@@ -16,7 +16,7 @@ Game Over
         {% if total_questions %}
         <div class="difficulty-breakdown">
             <h2>Difficulty Breakdown</h2>
-            <label>Questions attempted: {{ total_questions }}</label>
+            <label>Questions answered correctly: {{ total_questions }}</label>
             <ul>
                 <li>Easy questions: {{ difficulty_counts.easy }}</li>
                 <li>Medium questions: {{ difficulty_counts.medium }}</li>
